[package]
name = "cpd"
description = "Convoluted Pipe Dream"
version = "0.0.1"
edition = "2024"
default-run = "cpd"

[dependencies]
actix-files = "0.6"
actix-web = "4.10"
actix-web-lab = "0.24"
async-trait = "0.1"
futures = "0.3"
rand = "0.9"
regex = "1.11"
schemars = "0.8.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
term_size = "0.3"
termion = "4.0"
tokio = "1.44"
unicode-width = "0.2"

[features]
terminal_ui = []
